# ClipVault

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  components.json  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  start-dev.bat  start-dev.cmd  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: FEATURES.md
docs/releases/: v2.1.8.md  v2.1.9.md
docs/superpowers/plans/: 2026-06-05-tauri2-migration.md  2026-06-10-quick-copy-and-fixed-content-hotkeys.md  2026-06-26-local-runtime-logging.md  2026-06-29-recent-active-history-snapshot.md
docs/superpowers/specs/: 2026-06-05-tauri2-migration-design.md  2026-06-10-quick-copy-and-fixed-content-hotkeys-design.md  2026-06-25-history-context-menu-and-text-workbench-design.md  2026-06-26-history-export-import-rich-formats-design.md  2026-06-26-local-runtime-logging-design.md  2026-06-28-recent-history-hotkeys-tray-updater-design.md  2026-06-29-recent-active-history-snapshot-design.md
docs/superpowers/verification/: 2026-06-05-tauri2-migration.md
scripts/: generate-icon.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: clipvault.toml
src-tauri/src/: autostart.rs  cleanup.rs  commands.rs  detector.rs  errors.rs  events.rs  history_export.rs  hotkeys.rs  lib.rs  logger.rs  main.rs  models.rs  paste.rs  settings.rs  text_transform.rs  tray.rs  windows.rs
src-tauri/src/clipboard/: formats.rs  image.rs  mod.rs
src-tauri/src/database/: legacy.rs  migrations.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/privacy/: filter.rs  foreground.rs  mod.rs
src/main/: index.ts  preload.ts
src/main/cleanup/: scheduler.ts
src/main/clipboard/: detector.ts  imageProcessor.ts  monitor.ts
src/main/database/: migrations.ts  operations.ts  schema.ts
src/main/hotkeys/: manager.ts
src/main/hud/: window.ts
src/main/logger/: logger.ts
src/main/paste/: paster.ts
src/main/privacy/: blacklist.ts  filter.ts
src/main/search/: indexer.ts
src/main/settings/: service.ts
src/main/tray/: tray.ts
src/renderer/: hud.html  index.html  search.html
src/renderer/src/: App.tsx  hud.css  hud.ts  search.tsx  styles.css  vite-env.d.ts
src/renderer/src/components/: ClipboardDetail.tsx  ClipboardItem.tsx  ClipboardItemContextMenu.tsx  ClipboardList.tsx  CommandPanelShell.tsx  EmptyState.tsx  ErrorBoundary.tsx  ImageViewer.tsx  QuickSearchOverlay.tsx  SearchBar.tsx  SettingsPanel.tsx  TextWorkbenchDialog.tsx  TitleBar.tsx  TypeFilter.tsx
src/renderer/src/components/__tests__/: ClipboardDetail.test.tsx  ClipboardList.test.tsx  QuickSearchOverlay.test.tsx  SettingsPanel.test.tsx
src/renderer/src/components/ui/: badge.tsx  (+7 more)
src/renderer/src/hooks/: useClipboard.ts  useSearch.ts  useThemeMode.ts
src/renderer/src/lib/: historyLimit.test.ts  historyLimit.ts  search.test.ts  search.ts  tauriApi.test.ts  tauriApi.ts  textTransform.test.ts  textTransform.ts  updater.test.ts  updater.ts
src/renderer/src/store/: clipboardStore.ts
src/renderer/src/types/: react-window.d.ts
src/shared/: types.ts
(+2 files in other folders)
